--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "emailjs-com": "^3.2.0",
     "next": "14.2.14",
     "react": "^18",
+    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^18",
     "sass": "^1.79.4",
     "typescript": "^5"
