--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -17,6 +17,11 @@ permissions:
   contents: read
   pages: write
   id-token: write
+env:
+  NEXT_PUBLIC_EMAILJS_SERVICE_ID: service_civjhdn
+  NEXT_PUBLIC_EMAILJS_TEMPLATE_ID: template_way4wdf
+  NEXT_PUBLIC_EMAILJS_PUBLIC_KEY: sxTWM_1-C7lKWBrfD
+
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
@@ -28,6 +33,11 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    env:
+        NEXT_PUBLIC_EMAILJS_SERVICE_ID: service_civjhdn
+        NEXT_PUBLIC_EMAILJS_TEMPLATE_ID: template_way4wdf
+        NEXT_PUBLIC_EMAILJS_PUBLIC_KEY: sxTWM_1-C7lKWBrfD
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
