--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -38,6 +38,8 @@ jobs:
         NEXT_PUBLIC_EMAILJS_PUBLIC_KEY: sxTWM_1-C7lKWBrfD
     
     steps:
+      - name : "test run"
+        run: "echo${env.NEXT_PUBLIC_EMAILJS_SERVICE_ID}"
       - name: Checkout
         uses: actions/checkout@v4
       - name: Detect package manager
@@ -88,8 +90,8 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
-      - name : "test run"
-        run: "echo{env.NEXT_PUBLIC_EMAILJS_SERVICE_ID}"
+
+
 
   # Deployment job
   deploy:
